# callsme

./: Cargo.toml  Dockerfile  LICENSE  README.md  debug.json  docker-compose.yml
front/: index.html  package-lock.json  package.json  tsconfig.json
front/src/: audio.state.ts  audio.ts  consumer.state.ts  events.ts  index.ts  participant.ts  participants.state.ts  participants.ts  producer.state.ts  room.join.ts  room.settings.ts  room.state.ts  room.toolbar.ts  room.ts  socket.ts  style.css  types.ts  video.state.ts  video.ts
frontend/: .eslintrc.js  index.html  package.json  tsconfig.json  webpack.config.js
frontend/src/: close.room.ts  consumer.state.ts  events.ts  index.ts  participant.ts  participants.ts  pause.audio.ts  pause.video.ts  producer.state.ts  room.state.ts  room.toolbar.ts  room.ts  screen.share.ts  socket.ts  types.ts  video.ts
frontend/static/: style.css
src/: main.rs  messages.rs  participant.rs  room.rs  rooms_registry.rs
