[package]
name = "callsme"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lock = "3.4.1"
event-listener-primitives = "2.0.1"
futures-lite = "2.6.1"
serde_json = "1.0.143"
actix-web-actors = "4.3"
env_logger = "0.11.8"
actix-files = "0.6.7"
log = "0.4.27"

[dependencies.mediasoup]
version = "0.20.0"

[dependencies.parking_lot]
version = "0.12.4"
features = ["serde"]

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.18.0"

[dependencies.actix]
version = "0.13.5"

[dependencies.actix-web]
default-features = false
features = ["macros", "compress-gzip"]
version = "4.11.0"

[dependencies.clap]
features = ["derive"]
version = "4.5.46"
